--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,15 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/semantic-ui-reset/reset.css",
+              "node_modules/semantic-ui-dropdown/dropdown.css",
               "src/styles.scss"
+
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/semantic-ui-dropdown/dropdown.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
